--- a/components/comments/index.wxml
+++ b/components/comments/index.wxml
@@ -2,7 +2,7 @@
 <view class="comments">
   <view class="comment-top">
     <view class="Boutique">精选留言</view>
-    <view class="comment-add">写留言</view>
+    <view class="comment-add" bind:tap="modalinput">写留言</view>
   </view>
   <view class="comment-list" wx:if="{{!comments.length}}">
     快来抢沙发吧！！
@@ -21,5 +21,4 @@
       </view>
     </view>
   </view>
-  
 </view>
