--- a/pages/articleList/articleList.wxml
+++ b/pages/articleList/articleList.wxml
@@ -3,5 +3,27 @@
 <article 
     article="{{article}}" 
     like_status="{{article.like_status}}" 
-    comments="{{comments}}"
-    bind:like="onLike"></article>
+    bind:like="onLike" />
+<yd-comments comments="{{comments}}" bind:add="addComment" />
+<!-- <view>huashdfua{{inputValue}}</view> -->
+<!-- <view class="weui-cells__title">实时获取输入值：{{inputValue}}</view>
+<view class="weui-cells weui-cells_after-title">
+    <view class="weui-cell weui-cell_input">
+    <input class="weui-input"  
+        maxlength="10" bindinput="bindKeyInput" placeholder="输入同步到view中"/>
+    </view>
+</view> -->
+
+<modal 
+  hidden="{{!hiddenmodalput}}" 
+  title="请输入验证码" 
+  confirm-text="提交" 
+  cancel-text="重置" 
+  bindcancel="cancel" 
+  bindconfirm="confirm"> 
+    <input 
+      type="text"
+      bindinput="bindKeyInput" 
+      confirm-type='search'
+      placeholder="请输入内容" auto-focus/>  
+</modal>  
