--- a/pages/articleList/articleList.wxml
+++ b/pages/articleList/articleList.wxml
@@ -5,25 +5,17 @@
     like_status="{{article.like_status}}" 
     bind:like="onLike" />
 <yd-comments comments="{{comments}}" bind:add="addComment" />
-<!-- <view>huashdfua{{inputValue}}</view> -->
-<!-- <view class="weui-cells__title">实时获取输入值：{{inputValue}}</view>
-<view class="weui-cells weui-cells_after-title">
-    <view class="weui-cell weui-cell_input">
-    <input class="weui-input"  
-        maxlength="10" bindinput="bindKeyInput" placeholder="输入同步到view中"/>
-    </view>
-</view> -->
 
 <modal 
   hidden="{{!hiddenmodalput}}" 
-  title="请输入验证码" 
+  title="请输入短评内容！" 
   confirm-text="提交" 
-  cancel-text="重置" 
+  cancel-text="取消" 
   bindcancel="cancel" 
   bindconfirm="confirm"> 
     <input 
       type="text"
       bindinput="bindKeyInput" 
       confirm-type='search'
-      placeholder="请输入内容" auto-focus/>  
+      placeholder="请输入内容！" auto-focus/>  
 </modal>  
