--- a/pages/comment/comment.wxml
+++ b/pages/comment/comment.wxml
@@ -1,6 +1,7 @@
 <!--pages/like/like.wxml-->
 <view class="like-container">
-    <image class=".headline" src="/images/my/like.png" />
+    <!-- <image class=".headline" src="/images/my/like.png" /> -->
+    <view class="my-comments">*我的评论*</view>
     <view class="preview-container">
         <block wx:for="{{classics}}" wx:key="{{index}}">
             <h-preview bind:tap="onPreviewTap" class="preview" classic="{{item}}" />
