--- a/components/like/index.wxml
+++ b/components/like/index.wxml
@@ -1,5 +1,5 @@
 <!--components/like/index.wxml-->
-<view bind:tap="onLike" class="container">
+<view catchtap='onLike' hover-stop-propagation='true' class="container">
   <image src="{{like ? yesSrc : noSrc}}" alt=""/>
   <text>{{count}}</text>
 </view>
