--- a/pages/comment/comment.wxml
+++ b/pages/comment/comment.wxml
@@ -2,7 +2,10 @@
 <view class="like-container">
     <!-- <image class=".headline" src="/images/my/like.png" /> -->
     <view class="my-comments">*我的评论*</view>
-    <view class="preview-container">
+    <view wx:if="{{!classics.length}}" class="preview-container">
+        还没有您评论过的文章，快去欣赏吧！
+    </view>
+    <view wx:else class="preview-container">
         <block wx:for="{{classics}}" wx:key="{{index}}">
             <h-preview bind:tap="onPreviewTap" class="preview" classic="{{item}}" />
         </block>
